--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ REDIS_PORT=REDIS_PORT
 EXPIRES_ACCESS_TOKEN=EXPIRES_ACCESS_TOKEN=
 EXPIRES_REFRESH_TOKEN=EXPIRES_REFRESH_TOKEN
 
+## KEY SESSION ##
+KEY_SESSION=KEY_SESSION
+
 ## JWT ##
 JWT_SECRET=JWT_SECRET
 JWT_EXPIRE=JWT_EXPIRE
