--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,13 @@ KEY_SESSION=KEY_SESSION
 JWT_SECRET=JWT_SECRET
 JWT_EXPIRE=JWT_EXPIRE
 
+### Send mail
+GOOGLE_CLIENT_IDS = GOOGLE_CLIENT_IDS
+GOOGLE_CLIENT_SECRETS = GOOGLE_CLIENT_SECRETS
+GOOGLE_URL=GOOGLE_URL
+GOOGLE_REFRESH_TOKEN=GOOGLE_REFRESH_TOKEN
+NAME_EMAIL_FROM=NAME_EMAIL_FROM
+
 ### Accept Token and Refresh Token ####
 ACCESS_TOKEN_SECRET=ACCESS_TOKEN_SECRET
 REFRESH_TOKEN_SECRET=REFRESH_TOKEN_SECRET
