--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "googleapis": "^107.0.0",
     "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
     "node-fetch": "^3.2.10",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "otp-generator": "^4.0.0",
     "response-time": "^2.3.2",
